--- a/Flickr/Base.lproj/Main.storyboard
+++ b/Flickr/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="Qlh-ZT-CxP">
+                            <searchBar contentMode="redraw" placeholder="Please enter some text..." translatesAutoresizingMaskIntoConstraints="NO" id="Qlh-ZT-CxP">
                                 <rect key="frame" x="0.0" y="60" width="375" height="56"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
